k3s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-verifier
spec:
  selector:
    app: access-verifier
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
